# dynamic-linking

./: README.md
create-dll/: BillCalculateSupport.cpp  CMakeLists.txt  DomesticBillCalculator.cpp  DomesticUnits.cpp  IndustrialBillCalculator.cpp  IndustrialUnits.cpp
create-dll/include/: DomesticBillCalculator.h  DomesticUnits.h  IndustrialBillCalculator.h
link-dll/: CMakeLists.txt  main.cpp
link-dll/include/: BillCalculateSupport.h  IndustrialUnits.h
